# PlexMovieFileUpdateTool

./: .env.example  .gitignore  .project  CHANGELOG.md  EPISODE_TITLES_GUIDE.md  FOLDER_STRUCTURE.md  Makefile  PROBLEMATIC_SHOWS.md  README.md  README_SHORT.md  episode-title-overrides.json  plex_common.py  plex_movie_renaming_tool.py  plex_pipeline.py  plex_renamer.py  plex_transcoder.py  pyproject.toml  requirements.txt
resources/: plexifier-plan.txt
resources/plex-media-structure/: naming-and-organizing-movie-files.html  naming-and-organizing-tv-show-files.html
src/: plexifier.py
src/plex/: __init__.py
src/plex/rename/: __init__.py  batch.py  core.py  formatter.py  parser.py
src/plex/transcode/: __init__.py  batch.py  core.py
src/plex/utils/: __init__.py  constants.py  file_util.py  logger.py  system_util.py  time_util.py  tmdb.py
src/plexifier/: __init__.py  constants.py  file_manager.py  formatter.py  parser.py  plexifier.py  tmdb_client.py  transcoder.py
tests/: __init__.py
