[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plex-media-tool"
version = "1.0.0"
description = "Automated Plex media file renaming and transcoding pipeline with TMDb metadata lookup"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Bri Stevenski", email = "bstevenski@gmail.com" }
]
license = { text = "MIT" }
keywords = ["plex", "media", "transcoding", "tmdb", "ffmpeg", "video"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video :: Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "ffmpeg-python>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
plexifier = "plexifier:main"

[tool.hatch.build.targets.wheel]
packages = ["src/plexifier"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["E", "F", "W", "I", "N", "UP"]
lint.ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=plexifier --cov-report=term-missing"

[tool.hatch.envs.default.scripts]
standard-run = "python src/plexifier/plexifier.py"
debug-run = "python src/plexifier/plexifier.py --dry-run --log-level DEBUG"
ps = """
     pgrep -fl plexifier || echo 'No plexifier processes found';
     pgrep -fl ffmpeg || echo 'No ffmpeg processes found'
     """
trail-log = """
            ls -t .logs/plexifier.log 2>/dev/null |
            head -1 | xargs tail -f 2>/dev/null ||
            echo 'No log files found'
            """
kill = """
       pkill -f plexifier;
       pkill -f ffmpeg;
       echo 'Killed plexifier and ffmpeg processes'
       """
clean-python = """
               rm -rf `find . -type d -name __pycache__` 2>/dev/null || true;
               rm -f `find . -name '*.pyc'` 2>/dev/null || true;
               rm -f `find . -name '*.pyo'` 2>/dev/null || true;
               rm -rf `find . -name '*.egg-info'` 2>/dev/null || true;
               rm -rf `find . -name '.pytest_cache'` 2>/dev/null || true;
               echo '✅ Python clean complete'
               """
clean-logs = """
             rm -rf .logs 2>/dev/null;
             echo '✅ Log clean complete'
             """
clean-all = ['clean-python', 'clean-logs']
help = """
       echo 'Available commands:'; echo
       '   hatch run standard-run
           - Run plexifier in standard mode'; echo
       '   hatch run debug-run
           - Run plexifier in debug/dry-run mode'; echo
       '   hatch run ps
           - List running plexifier and ffmpeg processes'; echo
       '   hatch run trail-log
           - Tail the latest log file'; echo
       '   hatch run kill
           - Stop any running plexifier and ffmpeg processes'; echo
       '   hatch run clean-python
           - Remove Python cache files and directories'; echo
       '   hatch run clean-logs
           - Remove old log files'; echo
       '   hatch run clean-all
           - Perform a full clean (Python cache + log files)'
       """

[tool.pydocstyle]
select = ["D"]
match-dir = "src"
