[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plex-media-tool"
version = "1.0.0"
description = "Automated Plex media file renaming and transcoding pipeline with TMDb metadata lookup"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Bri Stevenski", email = "bstevenski@gmail.com" }
]
license = { text = "MIT" }
keywords = ["plex", "media", "transcoding", "tmdb", "ffmpeg", "video"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video :: Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "ffmpeg-python>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
plexifier = "plexifier:main"

[tool.hatch.build.targets.wheel]
packages = ["src/plexifier"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["E", "F", "W", "I", "N", "UP"]
lint.ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=plexifier --cov-report=term-missing"

[tool.hatch.envs.default.scripts]
standard-run = "python -m plexifier.plexifier"
debug-run = "python -m plexifier.plexifier --dry-run --log-level DEBUG"
episode-title-run = "python -m plexifier.plexifier --use-episode-titles"
episode-title-debug = "python -m plexifier.plexifier --use-episode-titles --dry-run --log-level DEBUG"

[tool.pydocstyle]
select = ["D"]
match-dir = "src"
